# sdet-automation-platform

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: api-tests.yml  ci.yml  e2e-tests.yml  nightly-regression.yml  performance-tests.yml  security-tests.yml
apps/api-gateway/: Dockerfile  go.mod  main.go
apps/auth-service/: Dockerfile  go.mod  handlers.go  jwt.go  main.go  middleware.go  migrate.go  store.go
apps/catalog-service/: Dockerfile  go.mod  main.go
apps/notification-service/: Dockerfile  go.mod  main.go
apps/order-service/: Dockerfile  clients.go  go.mod  go.sum  idempotency.go  main.go  middleware.go  orders.go  publisher.go
apps/payment-service/: Dockerfile  go.mod  main.go
apps/pricing-engine-cpp/: CMakeLists.txt  README.md
apps/pricing-engine-cpp/include/: pricing.h
apps/pricing-engine-cpp/src/: cli.cpp  coupons.cpp  pricing.cpp  tax.cpp
apps/web/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
docs/: architecture.md  ci-cd.md  flaky-tests.md  performance-testing.md  security-testing.md  test-strategy.md  walkthrough.md
infra/docker/: README.md
infra/grafana/: dashboard.json
infra/k8s/: namespace.yaml  postgres.yaml  redis.yaml  services.yaml
infra/prometheus/: prometheus.yml
platform/flaky_detector/: __main__.py  detector.py  requirements.txt
platform/report_ingestor/: __main__.py  ingestor.py  requirements.txt
scripts/: collect-artifacts.sh  reset-env.sh  run-all-tests.sh  run-regression.sh  run-smoke.sh  run-suite.sh  seed-db.sh
test-data/: seed.sql
(+85 files in other folders)
